<resources>
    <string name="app_name">wafflepod</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Login and Register Screen -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_here">Login here</string>
    <string name="register_here">Register here</string>
    <string name="already_registered">Already registered?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>

    <string name="start_listen">start listen</string>
    <string name="logout">Logout</string>
    <string name="send">Send message</string>

    <!-- Errors -->
    <string name="err_spotify_disconnected">"Spotify is not Connected."</string>
    <string name="err_generic_toast">An error has occurred. Check the logs to know more.</string>

    <!-- Message item -->
    <string name="title">Simple Title Text.</string>
    <string name="date">Date</string>
    <string name="message">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</string>
    <string name="message_hint">Type a message</string>

</resources>